--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   fluttertoast: ^8.2.2
   # 网络请求日志 https://pub-web.flutter-io.cn/packages/pretty_dio_logger/install
   pretty_dio_logger: ^1.3.1
+  # 图片加载  https://pub-web.flutter-io.cn/packages/cached_network_image/install
+  cached_network_image: ^3.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
