--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   flutter_screenutil: ^5.8.4
   # lottie动画 https://pub-web.flutter-io.cn/packages/lottie/install
   lottie: ^2.4.0
-  # 下拉刷新  https://pub-web.flutter-io.cn/packages/pull_to_refresh/install
-  pull_to_refresh: ^2.0.0
+  # 下拉刷新  https://pub.dev/packages/pull_to_refresh_flutter3
+  pull_to_refresh_flutter3: ^2.0.2
   # retrofit https://pub-web.flutter-io.cn/packages/retrofit/install   flutter pub run build_runner build
   retrofit: ^4.0.1
   # dio https://pub-web.flutter-io.cn/packages/dio/install
@@ -59,6 +59,8 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   # 图片加载  https://pub-web.flutter-io.cn/packages/cached_network_image/install
   cached_network_image: ^3.4.1
+  #banner轮播 https://pub.dev/packages/flutter_swiper_null_safety_flutter3/install
+  flutter_swiper_null_safety_flutter3: ^4.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
